Minor refactoring & eCharts implemenetation improvements to the project

--- a/resources/assets/css/styles.scss
+++ b/resources/assets/css/styles.scss
@@ -4,3 +4,10 @@
 input[type=checkbox] {
   margin-right: 5px;
 }
+
+.chart-style {
+  min-width: 400px;
+  width: 100%;
+  min-height: 400px;
+  height: 100%;
+}
